--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
         "@angular/platform-browser-dynamic": "~9.1.1",
         "@angular/router": "~9.1.1",
         "@google-cloud/storage": "^5.8.3",
+        "@ng-bootstrap/ng-bootstrap": "^10.0.0",
         "@types/datatables.net-select": "^1.2.6",
         "angular-datatables": "^11.1.2",
+        "bootstrap": "^4.0.0-beta.2",
         "cdk-table-exporter": "^1.2.5",
         "chart.js": "^2.9.4",
         "datatables.net": "^1.10.24",
         "datatables.net-buttons": "^1.7.0",
         "datatables.net-buttons-dt": "^1.7.0",
         "datatables.net-dt": "^1.10.24",
-        "html2canvas": "^1.0.0-rc.7",
+        "html2canvas": "^1.0.0",
         "ionicons": "^5.4.0",
         "jquery": "^3.6.0",
         "jspdf": "^2.3.1",
